--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -7,6 +7,8 @@ layout: default
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
+  
+  {% include nav.html %}
 
   <div class="post-content">
     {{ content }}
