Clean unecessary classes/files

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@
 
   <body>
 
-    {% include header.html %}
-
+  {% include header.html %}
+  {% include nav.html %}
     <div class="page-content">
       <div class="wrapper">
         {{ content }}
