--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,5 @@
-<div class="main-nav">
-  <ul>
-    {% for content in site.contents %}
-      <li><a href="{{ content.url }}">{{content.title}}</a></li>
-    {% endfor %}
-  </ul>
-</div>
+<nav>
+  {% for content in site.contents %}
+    <a href="{{ content.url }}">{{content.title}}</a></li>
+  {% endfor %}
+</nav>
