--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -2,16 +2,8 @@
 layout: default
 ---
 
-<article class="post">
+<article >
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
-  
-  {% include nav.html %}
-
-  <div class="post-content">
-    {{ content }}
-  </div>
+  {{ content }}
 
 </article>
