Add unclassed and normalize files

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <nav>
   {% for content in site.contents %}
-    <a href="{{ content.url }}">{{content.title}}</a></li>
+    <a href="{{ content.url }}" class="{% if }">{{content.title}}</a></li>
   {% endfor %}
 </nav>
