--- a/css/main.scss
+++ b/css/main.scss
@@ -1,1 +1,14 @@
-background-color: purple;
+---
+---
+
+// Ambience
+@import "ambience/fonts";
+@import "ambience/typography";
+
+// Base
+@import "base/normalize";
+@import "base/unclassed";
+@import "base/mixins";
+
+// Components
+@import "components/nav";
