Create main-wrapper component

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,12 +6,12 @@
   <body>
 
   {% include header.html %}
+
   {% include nav.html %}
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </div>
+
+  <div class="main-wrapper">
+    {{ content }}
+  </div>
 
     {% include footer.html %}
 
