--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<nav>
+<nav class="sidebar-nav">
   {% for content in site.contents %}
     <a href="{{ content.url }}" class="">{{content.title}}</a></li>
   {% endfor %}
