--- a/css/main.scss
+++ b/css/main.scss
@@ -11,4 +11,5 @@
 @import "base/mixins";
 
 // Components
-@import "components/main-wrapper";
+@import "components/sidebar-nav";
+@import "components/main-content";
