--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,15 +5,19 @@
 
   <body>
 
-  {% include header.html %}
+    <div class="main-content">
+    
+      {% include header.html %}
 
-  {% include nav.html %}
+      {% include nav.html %}
 
-  <div class="main-wrapper">
-    {{ content }}
-  </div>
+      <div class="main-content">
+        {{ content }}
+      </div>
 
-    {% include footer.html %}
+        {% include footer.html %}
+
+    </div>
 
   </body>
 
