--- a/_sass/base/_unclassed.scss
+++ b/_sass/base/_unclassed.scss
@@ -15,12 +15,15 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
   font-weight: inherit;
   font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 p {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
   margin: 0;
   font-size: $font-size-base;
   line-height: $line-height-base;
