--- a/css/main.scss
+++ b/css/main.scss
@@ -11,5 +11,6 @@
 @import "base/mixins";
 
 // Components
+@import "components/main-container";
 @import "components/sidebar-nav";
 @import "components/main-content";
