--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,19 +5,20 @@
 
   <body>
 
-    <div class="main-content">
+    {% include header.html %}
+   
+    <div class="main-container">
     
-      {% include header.html %}
-
       {% include nav.html %}
+      
 
       <div class="main-content">
         {{ content }}
       </div>
 
-        {% include footer.html %}
-
     </div>
+    
+    {% include footer.html %}
 
   </body>
 
