--- a/_sass/components/_main-content.scss
+++ b/_sass/components/_main-content.scss
@@ -1,11 +1,13 @@
 .main-content {
 
-  .wrapper {
+  overflow: hidden;
+
+  > .wrapper {
     display: block;
     margin-right: auto;
     margin-left: auto;
-    width: calc(50% + 20em);
-    max-width: calc(100% - 2em);
+    width: calc(50vw + 20em);
+    max-width: calc(100% - 4em);
   }
 
 
