Sidebar-nav basic style

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,5 @@
 <nav class="sidebar-nav">
+  <a href="/">Flama’s CSS Styleguide</a>
   {% for content in site.contents %}
     <a href="{{ content.url }}" class="">{{content.title}}</a></li>
   {% endfor %}
