--- a/_sass/components/_main-container.scss
+++ b/_sass/components/_main-container.scss
@@ -1,14 +1,18 @@
 @media only screen and (min-width: 640px) {
+ 
   .main-container {
     > .main-content {
       margin-left: 20vw;
     }
   
     > .sidebar-nav {
-    position: fixed;
-    width: 20vw;
+      width: 20vw;
+      height: 100vh;
+      position: fixed;
+      overflow-y: scroll;
+      border-right: 1px solid hsl(0, 0%, 90%);
     }
+
   }
+
 }
-
-
