--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -1,3 +1,10 @@
+p {
+  margin-top: 1rem;
+  font-size: $font-size-base;
+  line-height: $line-height-base;
+  font-family: $font-family-body;
+}
+
 h1,
 h2,
 h3,
@@ -6,14 +13,7 @@ h5,
 h6 {
   margin-top: 1rem;
   font-weight: inherit;
-  font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
-
-p {
-  margin-top: 1rem;
-  margin: 0;
-  font-size: $font-size-base;
-  line-height: $line-height-base;
+  font-family: $font-family-title;
 }
 
 h1 {
