--- a/_sass/components/_sidebar-nav.scss
+++ b/_sass/components/_sidebar-nav.scss
@@ -16,9 +16,10 @@
       letter-spacing: 0.05em;
       font-size: $font-size-deci;
       line-height: $line-height-deci;
+      font-weight: 600;
 
       &:hover {
-        background-color: hsl(0, 0%, 95%)
+        background-color: hsl(0, 0%, 95%);
       }
 
     }
@@ -26,9 +27,12 @@
     &:first-child {
       padding-top: 1.5rem;
       padding-bottom: 1.5rem;
+      border-bottom: 1px solid hsl(0, 0%, 90%);
 
       font-size: $font-size-base;
       line-height: $line-height-deci;
+      font-family: $font-family-title;
+      font-weight: 400;
     }
 
     &:hover {
@@ -36,7 +40,13 @@
     }
 
     &.-current {
-      background-color: hsl(0, 0%, 90%)
+      background-color: $color-highlight;
+      color: #fff;
+
+      &:hover {
+        background-color: mix(#000, $color-highlight, 10%);
+      }
+
     }
 
   }
