--- a/css/main.scss
+++ b/css/main.scss
@@ -10,6 +10,7 @@
 @import "base/normalize";
 @import "base/unclassed";
 @import "base/typography";
+@import "base/highlighting";
 
 // Components
 @import "components/main-container";
