Code monospaced font-family

--- a/_sass/ambience/_variables.scss
+++ b/_sass/ambience/_variables.scss
@@ -7,8 +7,9 @@ $font-size-kilo: 2em;
 $font-size-hecto: 1.6em;
 $font-size-deca: 1.3em;
 $font-size-base: 1em;
-$font-size-deci: 0.85em;
+$font-size-deci: 0.8em;
 $font-size-centi: 0.7em;
+$font-size-mili: 0.5em;
 
 // Line Height
 $line-height-mega: 3.5rem;
@@ -17,7 +18,7 @@ $line-height-hecto: 2.5rem;
 $line-height-deca: 2rem;
 $line-height-base: 1.5rem;
 $line-height-deci: 1rem;
-$line-height-centi: 0.5rem;
+$line-height-centi: 0.75rem;
 
 // Font Families
 $font-family-body: 'Open Sans', Arial, sans-serif;;
