--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,15 +11,20 @@
     
       {% include nav.html %}
       
-
       <div class="main-content">
+
+        <progress value="0"></progress> 
+   
         {{ content }}
+        
       </div>
 
     </div>
     
     {% include footer.html %}
-
+     
   </body>
+  
+  <script src="../assets/javascripts/reading-position.js"></script>
 
 </html>
