--- a/_sass/ambience/_fonts.scss
+++ b/_sass/ambience/_fonts.scss
@@ -3,3 +3,185 @@
 @import 'https://fonts.googleapis.com/css?family=Montserrat:400,700';
 
 @import 'https://fonts.googleapis.com/css?family=Inconsolata:400,700';
+
+@import 'https://fonts.googleapis.com/css?family=Droid+Serif:400,400i,700,700i';
+
+
+// Neue Haas Grotesk
+
+@font-face {
+  font-family: 'Neue Haas Grotesk Display Pro';
+  src: url('fonts/NHaasGroteskDSPro-25Th.otf');
+  font-weight: 100;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Neue Haas Grotesk Display Pro';
+  src: url('fonts/NHaasGroteskDSPro-26ThIt.otf');
+  font-weight: 100;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Neue Haas Grotesk Display Pro';
+  src: url('fonts/NHaasGroteskDSPro-35XLt.otf');
+  font-weight: 200;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Neue Haas Grotesk Display Pro';
+  src: url('fonts/NHaasGroteskDSPro-36XLtIt.otf');
+  font-weight: 200;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Neue Haas Grotesk Display Pro';
+  src: url('fonts/NHaasGroteskDSPro-45Lt.otf');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Neue Haas Grotesk Display Pro';
+  src: url('fonts/NHaasGroteskDSPro-46LtIt.otf');
+  font-weight: 300;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Neue Haas Grotesk Display Pro';
+  src: url('fonts/NHaasGroteskDSPro-55Rg.otf');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Neue Haas Grotesk Display Pro';
+  src: url('fonts/NHaasGroteskDSPro-56It.otf');
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Neue Haas Grotesk Display Pro';
+  src: url('fonts/NHaasGroteskDSPro-65Md.otf');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Neue Haas Grotesk Display Pro';
+  src: url('fonts/NHaasGroteskDSPro-66MdIt.otf');
+  font-weight: 500;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Neue Haas Grotesk Display Pro';
+  src: url('fonts/NHaasGroteskDSPro-75Bd.otf');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Neue Haas Grotesk Display Pro';
+  src: url('fonts/NHaasGroteskDSPro-76BdIt.otf');
+  font-weight: 700;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Neue Haas Grotesk Display Pro';
+  src: url('fonts/NHaasGroteskDSPro-95Blk.otf');
+  font-weight: 900;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Neue Haas Grotesk Display Pro';
+  src: url('fonts/NHaasGroteskDSPro-96BlkIt.otf');
+  font-weight: 900;
+  font-style: normal;
+}
+
+// Operator Mono
+
+@font-face {
+  font-family: 'Operator Mono';
+  src: url('font/OperatorMono-XLight.otf');
+  font-weight: 100;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Operator Mono';
+  src: url('fonts/OperatorMono-XLightItalic.otf');
+  font-weight: 100;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Operator Mono';
+  src: url('fonts/OperatorMono-Light.otf');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Operator Mono';
+  src: url('fonts/OperatorMono-LightItalic.otf');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Operator Mono';
+  src: url('fonts/OperatorMono-Book.otf');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Operator Mono';
+  src: url('fonts/OperatorMono-BookItalic.otf');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Operator Mono';
+  src: url('fonts/OperatorMono-Medium.otf');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Operator Mono';
+  src: url('fonts/OperatorMono-MediumItalic.otf');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Operator Mono';
+  src: url('fonts/OperatorMono-BoldItalic.otf');
+  font-weight: 700;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Operator Mono';
+  src: url('fonts/OperatorMono-Bold.otf');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Operator Mono';
+  src: url('fonts/OperatorMono-BoldItalic.otf');
+  font-weight: 700;
+  font-style: italic;
+}
