--- a/_sass/base/_highlighting.scss
+++ b/_sass/base/_highlighting.scss
@@ -10,9 +10,9 @@
   ; }
 
   .c     { color: #686b79; font-style: italic; } // Comment
-  .err   { color: #a61717; background-color: #e3d2d2; } // Error
+  .err   { color: #a61717; } // Error
   .k     { color: #ff75b5; } // Keyword
-  .o     { font-weight: 700; } // Operator
+  .o     { color: #ffaad9; font-style: italic; } // Operator
   .cm    { color: #686b79; font-style: italic; } // Comment.Multiline
   .cp    { color: #999; font-weight: 700; } // Comment.Preproc
   .c1    { color: #686b79; font-style: italic; } // Comment.Single
@@ -34,24 +34,25 @@
   .kp    { font-weight: 700; } // Keyword.Pseudo
   .kr    { font-weight: 700; } // Keyword.Reserved
   .kt    { color: #ffb86c; font-weight: 700; } // Keyword.Type
-  .m     { color: #099; } // Literal.Number
+  .m     { color: #69a8f3; } // Literal.Number
   .s     { color: #19f9d8; } // Literal.String
   .na    { color: #ffaad9; } // Name.Attribute
-  .nb    { color: #0086B3; } // Name.Builtin
+  .nb    { color: #ffaad9; font-style: italic; } // Name.Builtin
   .nc    { color: #ffb86c; } // Name.Class
   .no    { color: #ffaad9; } // Name.Constant
   .ni    { color: #800080; } // Name.Entity
   .ne    { color: #900; font-weight: 700; } // Name.Exception
-  .nf    { color: #900; font-weight: 700; } // Name.Function
+  .nf    { } // Name.Function
+  .nl    { color: #fc9; } // Name.Namespace
   .nn    { color: #555; } // Name.Namespace
   .nt    { color: #f6c; } // Name.Tag
   .nv    { color: #ffaad9; } // Name.Variable
   .ow    { font-weight: 700; } // Operator.Word
   .w     { color: #bbb; } // Text.Whitespace
-  .mf    { color: #099; } // Literal.Number.Float
-  .mh    { color: #099; } // Literal.Number.Hex
-  .mi    { color: #099; } // Literal.Number.Integer
-  .mo    { color: #099; } // Literal.Number.Oct
+  .mf    { color: #69a8f3; } // Literal.Number.Float
+  .mh    { color: #69a8f3; } // Literal.Number.Hex
+  .mi    { color: #69a8f3; } // Literal.Number.Integer
+  .mo    { color: #69a8f3; } // Literal.Number.Oct
   .sb    { color: #19f9d8; } // Literal.String.Backtick
   .sc    { color: #19f9d8; } // Literal.String.Char
   .sd    { color: #19f9d8; } // Literal.String.Doc
@@ -67,5 +68,5 @@
   .vc    { color: #ffaad9; } // Name.Variable.Class
   .vg    { color: #ffaad9; } // Name.Variable.Global
   .vi    { color: #ffaad9; } // Name.Variable.Instance
-  .il    { color: #099; } // Literal.Number.Integer.Long;
+  .il    { color: #69a8f3; } // Literal.Number.Integer.Long;
 }
