Font families fallback

--- a/_sass/ambience/_variables.scss
+++ b/_sass/ambience/_variables.scss
@@ -23,11 +23,11 @@ $line-height-centi: 0.75rem;
 // Font Families
 
 // $font-family-body: 'Open Sans', Arial, sans-serif;;
-// $font-family-title: 'Montserrat', 'Gotham', Helvetica sans-serif;;;
+// $font-family-title: 'Montserrat', 'Gotham', Helvetica, sans-serif;;;
 // $font-family-mono: 'Inconsolata', monospace;
 
-$font-family-body: 'Droid Serif', Arial, sans-serif;;
-$font-family-title: 'Neue Haas Grotesk Display Pro', Helvetica sans-serif;;;
+$font-family-body: 'Droid Serif', Georgia, serif;;
+$font-family-title: 'Neue Haas Grotesk Display Pro', Helvetica, sans-serif;;;
 $font-family-mono: 'Inconsolata', monospace;
 
 // Device Sizes
