--- a/_sass/base/_highlighting.scss
+++ b/_sass/base/_highlighting.scss
@@ -12,7 +12,7 @@
   .c     { color: #686b79; font-style: italic; } // Comment
   .err   { color: #a61717; } // Error
   .k     { color: #ff75b5; } // Keyword
-  .o     { color: #ffaad9; font-style: italic; } // Operator
+  .o     { } // Operator
   .cm    { color: #686b79; font-style: italic; } // Comment.Multiline
   .cp    { color: #999; font-weight: 700; } // Comment.Preproc
   .c1    { color: #686b79; font-style: italic; } // Comment.Single
