--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -12,7 +12,6 @@ h4,
 h5,
 h6 {
   margin-top: 1rem;
-  font-weight: 700;
   font-family: $font-family-title;
 }
 
@@ -20,12 +19,14 @@ h1 {
   margin-top: 3rem;
   font-size: $font-size-mega;
   line-height: $line-height-mega;
+  font-weight: 700;
 }
 
 h2 {
   margin-top: 2rem;
   font-size: $font-size-kilo;
   line-height: $line-height-kilo;
+  font-weight: 300;
 }
 
 h3 {
@@ -36,15 +37,21 @@ h3 {
 
 h4 {
   font-size: $font-size-deca;
-  line-height: $line-height-deca;
+  line-height: $line-height-base;
+  text-transform: uppercase;
+  letter-spacing: 1.5px;
+  font-weight: 300;
 }
 
 h5 {
   font-size: $font-size-base;
-  line-height: $line-height-base;
+  line-height: $line-height-deci;
 }
 
 h6 {
   font-size: $font-size-deci;
-  line-height: $line-height-deci;
+  line-height: $line-height-centi;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+  font-weight: 500;
 }
