Opertor ad monospace font

--- a/_sass/ambience/_variables.scss
+++ b/_sass/ambience/_variables.scss
@@ -29,7 +29,7 @@ $line-height-centi: 1rem;
 $font-family-body: 'Droid Serif', Georgia, serif;;
 // $font-family-title: 'Neue Haas Grotesk Display Pro', Helvetica, sans-serif;;;
 $font-family-title: 'Helvetica Neue', Helvetica, sans-serif;;;
-$font-family-mono: 'Inconsolata', monospace;
+$font-family-mono: 'Operator Mono', monospace;
 
 // Device Sizes
 $mobile:   40em;       /* 640px */
