--- a/_sass/ambience/_fonts.scss
+++ b/_sass/ambience/_fonts.scss
@@ -120,7 +120,7 @@
   font-family: 'Operator Mono';
   src: url('/assets/fonts/OperatorMono-XLightItalic.otf');
   font-weight: 100;
-  font-style: normal;
+  font-style: italic;
 }
 
 @font-face {
@@ -134,7 +134,7 @@
   font-family: 'Operator Mono';
   src: url('/assets/fonts/OperatorMono-LightItalic.otf');
   font-weight: 300;
-  font-style: normal;
+  font-style: italic;
 }
 
 @font-face {
@@ -148,7 +148,7 @@
   font-family: 'Operator Mono';
   src: url('/assets/fonts/OperatorMono-BookItalic.otf');
   font-weight: 400;
-  font-style: normal;
+  font-style: italic;
 }
 
 @font-face {
@@ -162,7 +162,7 @@
   font-family: 'Operator Mono';
   src: url('/assets/fonts/OperatorMono-MediumItalic.otf');
   font-weight: 500;
-  font-style: normal;
+  font-style: italic;
 }
 
 @font-face {
