--- a/_sass/components/_sidebar-nav.scss
+++ b/_sass/components/_sidebar-nav.scss
@@ -6,8 +6,7 @@
     
     display: block;
 
-    color: hsl(0, 0%, 60%);
-
+    color: rgba(#000, 0.4);
     font-family: $font-family-title;
     font-weight: 500;
     letter-spacing: 1px;
@@ -32,18 +31,17 @@
       letter-spacing: 0.5px;
     }
 
-    &:hover {
-      background-color: hsl(0, 0%, 95%);
-      color: hsl(0, 0%, 20%)
-    }
+    &:hover {background-color: hsl(0, 0%, 95%);}
+
+    &:active {background-color: hsl(0, 0%, 90%);}
 
     &.-current {
       background-color: $color-highlight;
       color: #fff;
 
-      &:hover {
-        background-color: mix(#000, $color-highlight, 10%);
-      }
+      &:hover {background-color: mix(#000, $color-highlight, 5%);}
+
+      &:active {background-color: mix(#000, $color-highlight, 10%);}
 
     }
 
