--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,6 @@
      
   </body>
   
-  <script src="../assets/javascripts/reading-position.js"></script>
+  <script src="{{ '/assets/javascripts/reading-position.js' | prepend: site.baseurl }}"></script>
 
 </html>
