--- a/_sass/ambience/_fonts.scss
+++ b/_sass/ambience/_fonts.scss
@@ -11,98 +11,98 @@
 
 @font-face {
   font-family: 'Neue Haas Grotesk Display Pro';
-  src: url('/assets/fonts/NHaasGroteskDSPro-25Th.otf');
+  src: url('{{ baseurl }}/assets/fonts/NHaasGroteskDSPro-25Th.otf');
   font-weight: 100;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Neue Haas Grotesk Display Pro';
-  src: url('/assets/fonts/NHaasGroteskDSPro-26ThIt.otf');
+  src: url('{{ baseurl }}/assets/fonts/NHaasGroteskDSPro-26ThIt.otf');
   font-weight: 100;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Neue Haas Grotesk Display Pro';
-  src: url('/assets/fonts/NHaasGroteskDSPro-35XLt.otf');
+  src: url('{{ baseurl }}/assets/fonts/NHaasGroteskDSPro-35XLt.otf');
   font-weight: 200;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Neue Haas Grotesk Display Pro';
-  src: url('/assets/fonts/NHaasGroteskDSPro-36XLtIt.otf');
+  src: url('{{ baseurl }}/assets/fonts/NHaasGroteskDSPro-36XLtIt.otf');
   font-weight: 200;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Neue Haas Grotesk Display Pro';
-  src: url('/assets/fonts/NHaasGroteskDSPro-45Lt.otf');
+  src: url('{{ baseurl }}/assets/fonts/NHaasGroteskDSPro-45Lt.otf');
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Neue Haas Grotesk Display Pro';
-  src: url('/assets/fonts/NHaasGroteskDSPro-46LtIt.otf');
+  src: url('{{ baseurl }}/assets/fonts/NHaasGroteskDSPro-46LtIt.otf');
   font-weight: 300;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Neue Haas Grotesk Display Pro';
-  src: url('/assets/fonts/NHaasGroteskDSPro-55Rg.otf');
+  src: url('{{ baseurl }}/assets/fonts/NHaasGroteskDSPro-55Rg.otf');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Neue Haas Grotesk Display Pro';
-  src: url('/assets/fonts/NHaasGroteskDSPro-56It.otf');
+  src: url('{{ baseurl }}/assets/fonts/NHaasGroteskDSPro-56It.otf');
   font-weight: 400;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Neue Haas Grotesk Display Pro';
-  src: url('/assets/fonts/NHaasGroteskDSPro-65Md.otf');
+  src: url('{{ baseurl }}/assets/fonts/NHaasGroteskDSPro-65Md.otf');
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Neue Haas Grotesk Display Pro';
-  src: url('/assets/fonts/NHaasGroteskDSPro-66MdIt.otf');
+  src: url('{{ baseurl }}/assets/fonts/NHaasGroteskDSPro-66MdIt.otf');
   font-weight: 500;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Neue Haas Grotesk Display Pro';
-  src: url('/assets/fonts/NHaasGroteskDSPro-75Bd.otf');
+  src: url('{{ baseurl }}/assets/fonts/NHaasGroteskDSPro-75Bd.otf');
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Neue Haas Grotesk Display Pro';
-  src: url('/assets/fonts/NHaasGroteskDSPro-76BdIt.otf');
+  src: url('{{ baseurl }}/assets/fonts/NHaasGroteskDSPro-76BdIt.otf');
   font-weight: 700;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Neue Haas Grotesk Display Pro';
-  src: url('/assets/fonts/NHaasGroteskDSPro-95Blk.otf');
+  src: url('{{ baseurl }}/assets/fonts/NHaasGroteskDSPro-95Blk.otf');
   font-weight: 900;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Neue Haas Grotesk Display Pro';
-  src: url('/assets/fonts/NHaasGroteskDSPro-96BlkIt.otf');
+  src: url('{{ baseurl }}/assets/fonts/NHaasGroteskDSPro-96BlkIt.otf');
   font-weight: 900;
   font-style: normal;
 }
@@ -118,70 +118,70 @@
 
 @font-face {
   font-family: 'Operator Mono';
-  src: url('/assets/fonts/OperatorMono-XLightItalic.otf');
+  src: url('{{ baseurl }}/assets/fonts/OperatorMono-XLightItalic.otf');
   font-weight: 100;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Operator Mono';
-  src: url('/assets/fonts/OperatorMono-Light.otf');
+  src: url('{{ baseurl }}/assets/fonts/OperatorMono-Light.otf');
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Operator Mono';
-  src: url('/assets/fonts/OperatorMono-LightItalic.otf');
+  src: url('{{ baseurl }}/assets/fonts/OperatorMono-LightItalic.otf');
   font-weight: 300;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Operator Mono';
-  src: url('/assets/fonts/OperatorMono-Book.otf');
+  src: url('{{ baseurl }}/assets/fonts/OperatorMono-Book.otf');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Operator Mono';
-  src: url('/assets/fonts/OperatorMono-BookItalic.otf');
+  src: url('{{ baseurl }}/assets/fonts/OperatorMono-BookItalic.otf');
   font-weight: 400;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Operator Mono';
-  src: url('/assets/fonts/OperatorMono-Medium.otf');
+  src: url('{{ baseurl }}/assets/fonts/OperatorMono-Medium.otf');
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Operator Mono';
-  src: url('/assets/fonts/OperatorMono-MediumItalic.otf');
+  src: url('{{ baseurl }}/assets/fonts/OperatorMono-MediumItalic.otf');
   font-weight: 500;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Operator Mono';
-  src: url('/assets/fonts/OperatorMono-BoldItalic.otf');
+  src: url('{{ baseurl }}/assets/fonts/OperatorMono-BoldItalic.otf');
   font-weight: 700;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Operator Mono';
-  src: url('/assets/fonts/OperatorMono-Bold.otf');
+  src: url('{{ baseurl }}/assets/fonts/OperatorMono-Bold.otf');
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Operator Mono';
-  src: url('/assets/fonts/OperatorMono-BoldItalic.otf');
+  src: url('{{ baseurl }}/assets/fonts/OperatorMono-BoldItalic.otf');
   font-weight: 700;
   font-style: italic;
 }
