--- a/_sass/ambience/_fonts.scss
+++ b/_sass/ambience/_fonts.scss
@@ -11,98 +11,98 @@
 
 @font-face {
   font-family: 'Neue Haas Grotesk Display Pro';
-  src: url(asset_path('NHaasGroteskDSPro-25Th.otf'));
+  src: url( $baseurl + 'NHaasGroteskDSPro-25Th.otf');
   font-weight: 100;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Neue Haas Grotesk Display Pro';
-  src: url(asset_path('NHaasGroteskDSPro-26ThIt.otf'));
+  src: url( $baseurl + 'NHaasGroteskDSPro-26ThIt.otf');
   font-weight: 100;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Neue Haas Grotesk Display Pro';
-  src: url(asset_path('NHaasGroteskDSPro-35XLt.otf'));
+  src: url( $baseurl + 'NHaasGroteskDSPro-35XLt.otf');
   font-weight: 200;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Neue Haas Grotesk Display Pro';
-  src: url(asset_path('NHaasGroteskDSPro-36XLtIt.otf'));
+  src: url( $baseurl + 'NHaasGroteskDSPro-36XLtIt.otf');
   font-weight: 200;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Neue Haas Grotesk Display Pro';
-  src: url(asset_path('NHaasGroteskDSPro-45Lt.otf'));
+  src: url( $baseurl + 'NHaasGroteskDSPro-45Lt.otf');
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Neue Haas Grotesk Display Pro';
-  src: url(asset_path('NHaasGroteskDSPro-46LtIt.otf'));
+  src: url( $baseurl + 'NHaasGroteskDSPro-46LtIt.otf');
   font-weight: 300;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Neue Haas Grotesk Display Pro';
-  src: url(asset_path('NHaasGroteskDSPro-55Rg.otf'));
+  src: url( $baseurl + 'NHaasGroteskDSPro-55Rg.otf');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Neue Haas Grotesk Display Pro';
-  src: url(asset_path('NHaasGroteskDSPro-56It.otf'));
+  src: url( $baseurl + 'NHaasGroteskDSPro-56It.otf');
   font-weight: 400;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Neue Haas Grotesk Display Pro';
-  src: url(asset_path('NHaasGroteskDSPro-65Md.otf'));
+  src: url( $baseurl + 'NHaasGroteskDSPro-65Md.otf');
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Neue Haas Grotesk Display Pro';
-  src: url(asset_path('NHaasGroteskDSPro-66MdIt.otf'));
+  src: url( $baseurl + 'NHaasGroteskDSPro-66MdIt.otf');
   font-weight: 500;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Neue Haas Grotesk Display Pro';
-  src: url(asset_path('NHaasGroteskDSPro-75Bd.otf'));
+  src: url( $baseurl + 'NHaasGroteskDSPro-75Bd.otf');
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Neue Haas Grotesk Display Pro';
-  src: url(asset_path('NHaasGroteskDSPro-76BdIt.otf'));
+  src: url( $baseurl + 'NHaasGroteskDSPro-76BdIt.otf');
   font-weight: 700;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Neue Haas Grotesk Display Pro';
-  src: url(asset_path('NHaasGroteskDSPro-95Blk.otf'));
+  src: url( $baseurl + 'NHaasGroteskDSPro-95Blk.otf');
   font-weight: 900;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Neue Haas Grotesk Display Pro';
-  src: url(asset_path('NHaasGroteskDSPro-96BlkIt.otf'));
+  src: url( $baseurl + 'NHaasGroteskDSPro-96BlkIt.otf');
   font-weight: 900;
   font-style: normal;
 }
@@ -111,77 +111,77 @@
 
 @font-face {
   font-family: 'Operator Mono';
-  src: url(asset_path('OperatorMono-XLight.otf'));
+  src: url( $baseurl + 'OperatorMono-XLight.otf');
   font-weight: 100;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Operator Mono';
-  src: url(asset_path('OperatorMono-XLightItalic.otf'));
+  src: url( $baseurl + 'OperatorMono-XLightItalic.otf');
   font-weight: 100;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Operator Mono';
-  src: url(asset_path('OperatorMono-Light.otf'));
+  src: url( $baseurl + 'OperatorMono-Light.otf');
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Operator Mono';
-  src: url(asset_path('OperatorMono-LightItalic.otf'));
+  src: url( $baseurl + 'OperatorMono-LightItalic.otf');
   font-weight: 300;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Operator Mono';
-  src: url(asset_path('OperatorMono-Book.otf'));
+  src: url( $baseurl + 'OperatorMono-Book.otf');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Operator Mono';
-  src: url(asset_path('OperatorMono-BookItalic.otf'));
+  src: url( $baseurl + 'OperatorMono-BookItalic.otf');
   font-weight: 400;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Operator Mono';
-  src: url(asset_path('OperatorMono-Medium.otf'));
+  src: url( $baseurl + 'OperatorMono-Medium.otf');
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Operator Mono';
-  src: url(asset_path('OperatorMono-MediumItalic.otf'));
+  src: url( $baseurl + 'OperatorMono-MediumItalic.otf');
   font-weight: 500;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Operator Mono';
-  src: url(asset_path('OperatorMono-BoldItalic.otf'));
+  src: url( $baseurl + 'OperatorMono-BoldItalic.otf');
   font-weight: 700;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Operator Mono';
-  src: url(asset_path('OperatorMono-Bold.otf'));
+  src: url( $baseurl + 'OperatorMono-Bold.otf');
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Operator Mono';
-  src: url(asset_path('OperatorMono-BoldItalic.otf'));
+  src: url( $baseurl + 'OperatorMono-BoldItalic.otf');
   font-weight: 700;
   font-style: italic;
 }
