--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,12 +3,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+
   <title>{% if page.title %}CSS Styleguide | {{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
 
-  <link rel="stylesheet" href="{{ '/css/main.css' | prepend: site.baseurl }}">
-  
+  <link rel="stylesheet" href="{{ '/assets/stylesheets/main.css' | prepend: site.baseurl }}">
+
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  
+
 </head>
