Remove first navigation item from config file

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,7 @@
 <nav class="sidebar-nav">
 
+  <a href="{{ site.baseurl }}/" class="{% if page.url == '/' %}-current{% endif %}" >{{ site.title }}</a>
+
   {% for link in site.navigation %}
     {% assign current = nil %}
     {% if page.url == link.url %}
