--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,12 +2,8 @@
 
   <a href="{{ site.baseurl }}/" class="{% if page.url == '/' %}-current{% endif %}" >{{ site.title }}</a>
 
-  {% for link in site.navigation %}
-    {% assign current = nil %}
-    {% if page.url == link.url %}
-      {% assign current = '-current' %}
-    {% endif %}
-    <a class="{{ current }}" href="{{ link.url | prepend: site.baseurl }}">{{ link.text }}</a>
-  {% endfor %}
+  {% for content in site.contents %}
+    <a href="{{ content.permalink | prepend: site.baseurl }}" class="{% if page.url == content.permalink %}-current{% endif %}" >{{ content.title }}</a>
+  {% endfor%}
 
 </nav>
