--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
   <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
 
   <link rel="stylesheet" href="{{ '/assets/stylesheets/main.css' | prepend: site.baseurl }}">
+  <link rel="icon" href="{{ '/assets/images/favicon-32.png' | prepend: site.baseurl }}" sizes="32x32">
 
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
