--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<nav class="sidebar-nav" role="display-mobile-nav">
+<nav class="page-nav" role="display-mobile-nav">
 
   {% for content in site.contents %}
     <a href="{{ content.permalink | prepend: site.baseurl }}" class="{% if page.url == content.permalink %}-current{% endif %}" >{{ content.title }}</a>
