Make way for responsive nav behavior

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,5 +24,6 @@
   </body>
   
   <script src="{{ '/assets/javascripts/reading-position.js' | prepend: site.baseurl }}"></script>
+  <script src="{{ '/assets/javascripts/responsive-nav.js' | prepend: site.baseurl }}"></script>
 
 </html>
