--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,4 +6,10 @@
     <a href="{{ content.permalink | prepend: site.baseurl }}" class="{% if page.url == content.permalink %}-current{% endif %}" >{{ content.title }}</a>
   {% endfor%}
 
+  <form action="{{ '/search.html' | prepend: site.baseurl }}" method="get">
+    <label for="search-box">Search</label>
+    <input type="text" id="search-box" name="query" placeholder="Text…"></input>
+    <input type="submit" value="search">
+  </form>
+
 </nav>
